--- a/react-portfolio-n2j/index.html
+++ b/react-portfolio-n2j/index.html
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Josefin+Sans:wght@100;300;400&display=swap"
       rel="stylesheet"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=IBM+Plex+Sans:ital,wght@0,400;1,700&display=swap');
+    </style>
   </head>
   <body>
     <div id="root"></div>
