--- a/react-portfolio-n2j/index.html
+++ b/react-portfolio-n2j/index.html
@@ -17,7 +17,9 @@
       rel="stylesheet"
     />
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Alata&family=Amatic+SC&family=IBM+Plex+Sans:ital,wght@1,700&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=IBM+Plex+Sans:ital,wght@0,400;1,700&display=swap');
+      
     </style>
   </head>
   <body>
