--- a/react-portfolio-n2j/index.html
+++ b/react-portfolio-n2j/index.html
@@ -21,7 +21,11 @@
     href="https://fonts.googleapis.com/css2?family=Alata&family=Amatic+SC&family=IBM+Plex+Sans:ital,wght@1,700&display=swap"
     rel="stylesheet">
 
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alata&family=Amatic+SC&family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;1,100;1,700&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap"
+    rel="stylesheet">
 
 </head>
 
