--- a/react-portfolio-n2j/index.html
+++ b/react-portfolio-n2j/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio Page</title>
-  <link rel="stylesheet" href="./src/index.css">
+  <link rel="stylesheet" href="./src/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
