--- a/react-portfolio-n2j/index.html
+++ b/react-portfolio-n2j/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/img-icons/title.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio Page</title>
+  <title>Interstellar Portfolio</title>
   <link rel="stylesheet" href="./src/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
